# kestrel-cloud-runpod

./: .gitignore  README.md  pyproject.toml  runpod_config.toml
.github/workflows/: ci.yml  publish.yml
kestrel_cloud_runpod/: __init__.py  core.py  feature.py  manager.py  models.py  ollama.py  providers.py  training.py
tests/: conftest.py  test_runpod_feature.py  test_runpod_logs.py  test_runpod_model_contracts.py
